# openclaw-trader

./: .gitignore  LICENSE  README.md  README.zh-CN.md  package.json  pyproject.toml  scripts_bootstrap.py
docs/: README.md  config-and-runtime.md  dispatch-and-sessions.md  market-intelligence.md  operations.md  perps-convergence.md  prelaunch-readiness.md  strategy-and-risk.md  system-overview.md  v2-dev-comparison.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  vite.config.js  vite.config.ts
scripts/: _quant_history_bundle.py  backfill_quant_history.py  benchmark_quant_12h_focused.py  benchmark_quant_1h_focused.py  benchmark_quant_eth4h_focused.py  benchmark_quant_intelligence.py  digital_oracle_query.py  probe_tardis_access.py  prune_memory_assets.py  pull_chief_retro.py  pull_pm_runtime.py  pull_rt_runtime.py  run_dispatcher.sh  run_maintenance.sh  run_readonly_query_proxy.py  run_server.sh  submit_chief_retro.py  submit_rt_decision.py
tests/: __init__.py  helpers_v2.py  test_briefs.py  test_chief_retro_scripts.py  test_coinbase_runtime.py  test_dispatcher.py  test_legacy_sol_compat.py  test_maintenance.py  test_ml_pipeline.py  test_news_monitor.py  test_news_sources.py  test_perp_paper_engine.py  test_perp_runtime.py  test_position_drawdown.py  test_qi_benchmark_scripts.py  test_state_store.py  test_strategy.py  test_v2_agent_failure_alert.py  test_v2_agent_gateway.py  test_v2_api_integration.py  test_v2_coinbase_client.py  test_v2_config_loader.py  test_v2_data_ingest.py  test_v2_execution_gateway.py  test_v2_macro_brief_and_submit_gate.py  test_v2_macro_data.py  test_v2_memory_assets.py  test_v2_memory_retention.py  test_v2_news_events.py  test_v2_notification_service.py  test_v2_policy_risk.py  test_v2_price_recheck.py  test_v2_quant_intelligence.py  test_v2_quant_support.py  test_v2_rabbitmq_integration.py  (+4 more)
(+551 files in other folders)
